hive/honeys/stirling-pdf/ingressroute.yml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: stirling-pdf-main
  namespace: stirling-pdf-k8s
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`pdf.savew.dev`)
      priority: 10
      services:
        - kind: Service
          name: stirling-pdf-main
          namespace: stirling-pdf-k8s
          passHostHeader: true
          port: 8080
          scheme: http
  tls:
    domains:
      - main: pdf.savew.dev
    secretName: wildcard-savew.dev-tls
